samples/_failures_safe/1761364843_a5d8ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4a28ca6.c: In function ‘get_user_data’:
./samples/SAFE/__tmp_f4a28ca6.c:178:5: error: expected expression at end of input
  178 |     if (buffer == NULL || buffer_size ==
      |     ^~
./samples/SAFE/__tmp_f4a28ca6.c:178:5: error: expected declaration or statement at end of input
